OO-684 fix left alignment in trees with root, add marker css to tree, more general defaults in definitions

--- a/src/main/webapp/static/themes/openolat/all/_definitions.scss
+++ b/src/main/webapp/static/themes/openolat/all/_definitions.scss
@@ -39,6 +39,12 @@ $glossColor4 : #3C3C3C !default;
 $okcolor : #009900 !default;
 $nokcolor : #990000 !default;
 
+$linkcolor : $basecolor !default;
+$linkcolor_hover: $basecolor !default;
+$menulinkcolor : $basegray !default;
+$menulinkcolor_hover : $basecolor !default;
+$menulinkcolor_selected : $basecolor !default;
+
 /* full screen margins. Set to 0% to have have no surrounding border at all */
 $fullScreenModalMarginPercents: 2% !default;
 
